# OpenGL

./: .gitignore  CMakeLists.txt  LICENCE  README.md  ToDo  build.sh  points.data
data/meshes/cube/: indices.data  points.data
data/meshes/quad/: points.data
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/fw/: CMakeLists.txt  mesh.h  shader.cpp  shader.h  texture.h  utils.cpp  utils.h  vertex.h
src/shaders/: shader.frag  shader.vert
